--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -24,11 +24,13 @@ services:
       - "80:80"
   web:
     build: .
-    command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
     ports:
       - "8000:8000"
+    environment:
+      - POSTGRES_HOST=db
     depends_on:
       - db
 
