--- a/frontend/evento_app/package.json
+++ b/frontend/evento_app/package.json
@@ -8,7 +8,8 @@
     "@material-ui/styles": "^4.0.0-rc.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "recharts": "^1.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
