--- a/frontend/evento_app/package.json
+++ b/frontend/evento_app/package.json
@@ -8,6 +8,7 @@
     "@material-ui/styles": "^4.0.0-rc.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "recharts": "^1.6.2"
   },
