--- a/frontend/evento_app/package.json
+++ b/frontend/evento_app/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^4.0.0-rc.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
